--- a/index.html
+++ b/index.html
@@ -4,12 +4,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Софья Константинова</title>
 </head>
 <body>
-  
+  <div class="page-wrapper">
+    <header class="header">
+      <span class="hello">вышивка гладью <br>
+        и шитье</span>
+    </header>
+    <div class="container">
+      <div class="user">
+        <img 
+        width="148"
+        height="148"
+        src="img/avatar.png" 
+        alt="Elizabeth Kolegova"
+         class="user-avatar"/>
+         <h1 class="user-name">Elizabeth Kolegova</h1>
+         <p class="user-description">мастерица</p>
+      </div>
+      <!-- /.user -->
+      <div class="card">
+        <div class="buttons">
+          <a href="https://vk.com/aliceneedlebird" class="button vk">
+            <img src="img/icons/vk.svg" alt="" class="button-icon">
+          </a>
+
+        </div>
+        <!-- /.buttons -->
+      </div>
+      <!-- /.card -->
+    </div>
+    <!-- /.container -->
+    </div>
+    <!-- /.page-wrapper -->
  <script src="js/main.js"></script> 
 </body>
 </html>
