--- a/index.html
+++ b/index.html
@@ -32,12 +32,32 @@
       <div class="card">
         <div class="buttons">
           <a href="https://vk.com/aliceneedlebird" class="button vk">
-            <img src="img/icons/vk.svg" alt="" class="button-icon">
-          </a>
-
+            <img src="img/icons/vk.svg" alt="" class="button-icon"></a>
         </div>
         <!-- /.buttons -->
+         <p class="about">
+          В каждой детали, в каждой травинке кроется нечто волшебное и таинственное, что можно разглядеть лишь сердцем
+         </p>
       </div>
+      <div class="imgdog1">
+        <img 
+          width="148"
+          height="148"
+          src="img/dog1.png" 
+          alt=""
+           class="imgdog1"/>
+      </div>
+      <!-- /.imgdog1-->
+      <div class="imgdog2">
+        <img 
+          width="148"
+          height="148"
+          src="img/dog2.png" 
+          alt=""
+           class="imgdog2"/>
+      </div>
+       <!-- /.imgdog2-->
+    </div>
       <!-- /.card -->
     </div>
     <!-- /.container -->
